Removed the wallet features from the users service
