# user-service/src/api/dtos/kycDTO.ts
@@ -1,0 +1,8 @@
+import { KYCTiers } from "../models/postgres/UserKYCInfomation";
+
+export interface KycData {
+    id: string;
+    dob: string;
+    bvn: string,
+    tier: KYCTiers
+}
